[project]
name = "ai-agent-langgraph-atlas-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box-sdk-gen>=1.14.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-box>=0.3.2",
    "langchain-community>=0.3.24",
    "langchain-mongodb>=0.6.2",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "pymongo>=4.11.3",
    "python-dotenv>=1.1.0",
]
